<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:context=".ManualInstrumentationFragment">

    <!-- TODO: clean up layout to adhere to rules
    https://github.com/umesh0492/android-guidelines/blob/master/project_and_code_guidelines.md
    -->

    <RelativeLayout
        android:id="@+id/scrollViewChild"
        style="?card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/textFragmentHeader"
            style="?textLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/fragment_header_custom_actions" />

        <EditText
            android:id="@+id/editTextUserActionName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textFragmentHeader"
            style="?editTextBox"
            android:gravity="center_horizontal"
            android:hint="@string/user_action_name"
            android:text="@string/custom_user_action"/>

        <LinearLayout
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextUserActionName"
            android:orientation="horizontal"
            style="?layoutRow">

            <Button
                android:id="@+id/buttonEnterAction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?buttonDefault"
                android:onClick="onFragmentButton"
                android:text="@string/enter_action" />

            <Button
                android:id="@+id/buttonLeaveAction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?buttonDefault"
                android:enabled="false"
                android:text="@string/leave_action"
                android:onClick="onFragmentButton"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/row1"
            android:orientation="horizontal"
            style="?layoutRow">

            <Button
                android:id="@+id/buttonChildAction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="?buttonDefault"
                android:layout_weight="1"
                android:layout_marginHorizontal="2dp"
                android:text="@string/create_child_action"
                android:enabled="false"
                android:onClick="onFragmentButton" />

            <Button
                android:id="@+id/buttonCloseChild"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="?buttonDefault"
                android:layout_weight="1"
                android:layout_marginHorizontal="2dp"
                android:enabled="false"
                android:text="@string/close_child_action"
                android:onClick="onFragmentButton" />
        </LinearLayout>

<!--        <TextView-->
<!--            android:id="@+id/textViewChildActionBanner"-->
<!--            style="?textLarge"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:gravity="center_horizontal"-->
<!--            android:text="@string/add_children" />-->

        <EditText
            android:id="@+id/editTextURL"
            style="?editTextBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/row2"
            android:hint="@string/change_url"
            android:inputType="textUri"
            android:text="@string/request_url" />

        <LinearLayout
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextURL"
            android:orientation="horizontal"
            style="?layoutRow">

            <Button
                android:id="@+id/buttonManualWebRequest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?buttonDefault"
                android:onClick="onFragmentButton"
                android:enabled="false"
                android:text="@string/web_request" />

            <Button
                android:id="@+id/buttonAddUrl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?buttonDefault"
                android:onClick="onFragmentButton"
                android:enabled="false"
                android:text="@string/add_url" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/row3"
            android:orientation="horizontal"
            style="?layoutRow">

            <Button
                android:id="@+id/buttonReportValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="2dp"
                style="?buttonDefault"
                android:onClick="onFragmentButton"
                android:enabled="false"
                android:text="@string/report_value" />

            <Button
                android:id="@+id/buttonReportEvent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="2dp"
                style="?buttonDefault"
                android:onClick="onFragmentButton"
                android:enabled="false"
                android:text="@string/event" />

            <Button
                android:id="@+id/buttonReportError"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="2dp"
                style="?buttonDefault"
                android:onClick="onFragmentButton"
                android:enabled="false"
                android:text="@string/report_error" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>